# AdventOfCode2025

./: LICENSE  README.md
day1/: day1.opam  dune  dune-project
day2/: day2.opam  dune  dune-project
day3/: dune-project
day4/: day4.opam  dune  dune-project
day5/: dune-project
day6/: day6.opam  dune-project  out
day7/: dune-project
day9/: dune-project
